# pte-xdf

./: .gitignore  404.html  README.md  index.html  mkdocs.yml  objects.inv  pylintrc  pyproject.toml  tox.ini
.github/workflows/: codecov.yml  tests.yml
CHANGELOG/: index.html
api-reference/: index.html
contribute/: index.html
doc/: CHANGELOG.md
docs/: CHANGELOG.md  api-reference.md  contribute.md  index.md  installation.md  quickstart-guide.md
installation/: index.html
license/: index.html
quickstart-guide/: index.html
requirements/: build-requirements.txt  dev-requirements.txt  doc-requirements.txt  release-requirements.txt  requirements.txt
search/: search_index.json
src/pte_xdf/: __init__.py  xdf.py
tests/: test_xdf.py
